fix board list on mobile; add step forward/backward buttons to time travel

--- a/dapp/src/assets/styles/components.scss
+++ b/dapp/src/assets/styles/components.scss
@@ -106,3 +106,11 @@
     pointer-events: none;
     opacity: 0.5;
 }
+
+.dchan-brackets::before {
+    content: "[";
+}
+
+.dchan-brackets::after {
+    content: "]";
+}
